openshift/lab 10/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: custom-nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: example.minikube
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: custom-nginx-service
            port:
              number: 80
